<resources>
    <string name="app_name">BeeLife</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="horizontal_timeline" />
    <string name="vertical_timeline" />

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in BeeLife now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_create_form">Create Form</string>
    <string name="btn_get_form">Get Form</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="app_name2">HorizontalCalendarLibrary</string>
    <string name="action_settings2">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <string name="facebook_app_id">171265526973908</string>
    <string name="fb_login_protocol_scheme">fb171265526973908</string>

    <string name="quotedesc">Welcome! Where should we deliver to?</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete_activity">DELETE ACTIVITY</string>
    <string name="open">Open!!!</string>
    <string name="close">Close!!!</string>
    <string name="logout">Log out</string>
    <string name="showdatabase">ShowDatabase</string>
    <string name="title_activity_place_map">Map</string>
    <string name="Request">Request_</string>
    <string name="Freinds">Friends</string>
    <string name="FriendsRequest">FriendsRequest</string>
    <string name="ShowListFriends">ShowListFriends</string>

    <string name="title_activity_navigation">Navigation</string>
    <string name="category_calendar">Calendar</string>
    <string name="category_overview">Overview</string>
    <string name="category_fr">FRIEND REQUEST</string>
    <string name="category_rq">ACTIVITY REQUEST</string>
    <string name="setting">set reminder-morning time</string>
    <string name="history">History activity</string>
    <string name="action_sign_up_short">Register</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="title_activity_share_dialog">ShareDialogActivity</string>
</resources>
